# vllm-ascend

./: COMPRESSED_MASK_OPERATOR_WIKI.md  SCHEDULING_ATTENTION_STATE_WIKI.md
csrc/: build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/attention/chunk_gated_delta_rule_v310/: CMakeLists.txt
csrc/attention/chunk_gated_delta_rule_v310/op_host/: CMakeLists.txt  aclnn_chunk_gated_delta_rule_v310.h  chunk_gated_delta_rule_v310.h  chunk_gated_delta_rule_v310_infershape.cpp  chunk_gated_delta_rule_v310_tiling.h
csrc/attention/chunk_gated_delta_rule_v310/op_kernel/: chunk_gated_delta_rule_v310.cpp  chunk_gated_delta_rule_v310_tiling_data.h
csrc/causal_conv1d_v310/op_host/: causal_conv1d_v310_tiling.cpp
csrc/chunk_gated_delta_rule_v310/: chunk_gated_delta_rule_310_torch_adpt.h
csrc/chunk_gated_delta_rule_v310/op_host/: CMakeLists.txt  aclnn_chunk_gated_delta_rule_v310.cpp  chunk_gated_delta_rule_v310.cpp  chunk_gated_delta_rule_v310_def.cpp  chunk_gated_delta_rule_v310_infershape.cpp  chunk_gated_delta_rule_v310_tiling.cpp
csrc/moe/chunk_gated_delta_rule_fwd_prepare/: CMakeLists.txt
tests/ut/: test_utils.py
tests/ut/compilation/: test_acl_graph.py
vllm_ascend/: utils.py
vllm_ascend/_310p/: model_runner_310p.py  patch_qwen2_5_vl.py  worker_310p.py
vllm_ascend/_310p/attention/: attention_v1.py
vllm_ascend/_310p/fused_moe/: fused_moe.py
vllm_ascend/_310p/ops/: activation.py  linear.py  mm_encoder_attention.py  rotary_embedding.py
vllm_ascend/_310p/quantization/: modelslim_config.py
vllm_ascend/attention/: attention_v1.py
vllm_ascend/compilation/: acl_graph.py
vllm_ascend/compilation/passes/: qknorm_rope_fusion_pass.py
vllm_ascend/ops/: linear.py  rotary_embedding.py
vllm_ascend/patch/worker/: __init__.py  patch_gemma4_mm.py  patch_qwen3_5_310.py
vllm_ascend/worker/: model_runner_v1.py  worker.py
vllm_ascend/worker/v2/: model_runner.py
(+16 files in other folders)
